--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="base.css">
-    <title>Kidin</title>
+    <title>Lotto</title>
 </head>
 
 <body>
 <!-- Header -->
 <header class="header">
+    
     <div class="navbar">
-        <div class="nav__items" style="color: #c86877;">Dat ve phim chieu rap</div>
-        <div class="nav__items"><a href="" class="nav__items-link">Lich chieu phim</a></div>
-        <div class="nav__items"><a href="" class="nav__items-link">Rap</a></div>
-        <div class="nav__items"><a href="" class="nav__items-link">Tin tuc</a></div>
-        <div class="nav__items"><a href="" class="nav__items-link">Cong dong</a></div>
+        <div class="nav__items" style="color: #c86877;">Lotto</div>
+        <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
+        <div class="nav__items"><a href="" class="nav__items-link">Thanh Toán</a></div>
         <div class="nav__logo"></div>
         <div class="nav__search">
             <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
