--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -11,27 +11,28 @@
 </head>
 
 <body>
-<!-- Header -->
-<header class="header">
-    
-    <div class="navbar">
-        <div class="nav__items" style="color: #c86877;">Lotto</div>
-        <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
-        <div class="nav__items"><a href="" class="nav__items-link">Thanh Toán</a></div>
-        <div class="nav__logo"></div>
-        <div class="nav__search">
-            <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
-            <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+    <!-- Header -->
+    <header class="header">
+        <div class="header__nav__wp">
+            <div class="navbar">
+                <div class="nav__items" style="color: #c86877;">Lotto</div>
+                <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
+                <div class="nav__items"><a href="" class="nav__items-link">Thanh Toán</a></div>
+                <div class="nav__logo"></div>
+                <div class="nav__search">
+                    <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
+                    <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+                </div>
+            </div>
+            <div class="nav__login">
+                <i class="fa-regular fa-user nav__login-icon"></i>
+                <a href="" class="nav__login-txt">Login</a>
+            </div>
         </div>
-    </div>
-    <div class="nav__login">
-        <i class="fa-regular fa-user nav__login-icon"></i>
-        <a href="" class="nav__login-txt">Login</a>
-    </div>
-</header>
-<!-- Body -->
-<!--Footer-->
-<!--Script-->
+    </header>
+    <!-- Body -->
+    <!--Footer-->
+    <!--Script-->
 </body>
 
 </html>
