--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -1,38 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+    <!DOCTYPE html>
+    <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="base.css">
-    <title>Lotto</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="base.css">
+        <title>Lotto</title>
+    </head>
 
-<body>
-    <!-- Header -->
-    <header class="header">
-        <div class="header__nav__wp">
-            <div class="navbar">
-                <div class="nav__items" style="color: #c86877;">Lotto</div>
-                <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
-                <div class="nav__items"><a href="" class="nav__items-link">Thanh Toán</a></div>
-                <div class="nav__logo"></div>
-                <div class="nav__search">
-                    <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
-                    <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+    <body>
+        <!-- Header -->
+        <header class="header">
+            <div class="header__nav__wp">
+                <div class="navbar">
+                    <div class="nav__items" style="color: #c86877;">Lotto</div>
+                    <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
+                    <div class="nav__items"><a href="../Checkout/checkout.html">Thanh Toán</a>
+</div>
+                    <div class="nav__logo"></div>
+                    <div class="nav__search">
+                        <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
+                        <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+                    </div>
+                </div>
+                <div class="nav__login">
+                    <i class="fa-regular fa-user nav__login-icon"></i>
+                    <a href="" class="nav__login-txt">Login</a>
                 </div>
             </div>
-            <div class="nav__login">
-                <i class="fa-regular fa-user nav__login-icon"></i>
-                <a href="" class="nav__login-txt">Login</a>
-            </div>
-        </div>
-    </header>
-    <!-- Body -->
-    <!--Footer-->
-    <!--Script-->
-</body>
+        </header>
+        <!-- Body -->
+        <!--Footer-->
+        <!--Script-->
+    </body>
 
-</html>
+    </html>
