--- a/Frontend/Checkout/book.html
+++ b/Frontend/Checkout/book.html
@@ -80,7 +80,7 @@
     <div class="seats" id="seats"></div>
     <div class="order-summary">
       <div>Tổng đơn hàng: <span id="total">0</span> đ</div>
-      <button class="btn">Tiếp tục</button>
+      <a href="../Checkout/checkout.html"><button class="btn">Tiếp tục</button> </a>
     </div>
   </div>
 
