--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -17,7 +17,7 @@
                 <div class="navbar">
                     <div class="nav__items" style="color: #c86877;">Lotto</div>
                     <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
-                    <div class="nav__items"><a href="../Checkout/checkout.html">Thanh Toán</a>
+                    <div class="nav__items"><a href="../Checkout/book.html">Thanh Toán</a>
 </div>
                     <div class="nav__logo"></div>
                     <div class="nav__search">
