--- a/Frontend/News2/index.html
+++ b/Frontend/News2/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang = "vi">
 <head>
-<meta charset = "UTF-8">
-<title>Review Phim</title>
+    <meta charset = "UTF-8">
+    <title>Review Phim</title>
 <link rel = "mainsheet" href = "main.css">
 </head>
 <body>
-<div class = "container"></div>
-<!--Cot trai-->
-<div class = "main-content"></div>
-<h2>Moi Nhat</h2>
-<div class = "review-card"></div>
-<img src = "img1.jpg" alt = "Na Tra 2">
-<idv class = "review-text"></idv>
+    <div class = "container">
+        <div class = "main-content">
+            <h2>Mới Nhất</h2>
+            <div class = "review -card">
+                <img src = "img1.jpg" alt = "Na Tra 2">
+                <div class = "review-text">
+                    <h3>Review Na Tra 2: Ma Đồng Náo Hải - Bom tấn hoạt hình đúng nghĩa!</h3>
+                    <p class = "author">miduynph - 55 phút trước</p>
+                    <p>Na Tra 2: ma Đồng Náo Hải xứng đáng được gọi là siêu phẩm hoạt hình của điện ảnh Trung Quốc năm 2025.</p>  
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</body>
