--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -1,39 +1,82 @@
-    <!DOCTYPE html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="base.css">
-        <title>Lotto</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="base.css">
+    <title>Lotto</title>
+</head>
 
-    <body>
-        <!-- Header -->
-        <header class="header">
-            <div class="header__nav__wp">
-                <div class="navbar">
-                    <div class="nav__items" style="color: #c86877;">Lotto</div>
-                    <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
-                    <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link" >Thanh Toán</a>
-</div>
-                    <div class="nav__logo"></div>
-                    <div class="nav__search">
-                        <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
-                        <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
-                    </div>
+<body>
+    <!-- Header -->
+    <header class="header">
+        <div class="header__nav__wp">
+            <div class="navbar">
+                <div class="nav__items" style="color: #c86877;">Lotto</div>
+                <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
+                <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
                 </div>
-                <div class="nav__login">
-                    <i class="fa-regular fa-user nav__login-icon"></i>
-                    <a href="" class="nav__login-txt">Login</a>
+                <div class="nav__logo"></div>
+                <div class="nav__search">
+                    <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
+                    <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
                 </div>
             </div>
-        </header>
-        <!-- Body -->
-        <!--Footer-->
-        <!--Script-->
-    </body>
+            <div class="nav__login">
+                <i class="fa-regular fa-user nav__login-icon"></i>
+                <a href="" class="nav__login-txt">Login</a>
+            </div>
+        </div>
+    </header>
+    <!-- Body -->
+    <div class="app">
+        <!-- Mua ve theo phim -->
+        <div class="app__movies">
+            <h1 class="app__movies-title">Mua Ve Theo Phim</h1>
+            <div class="app__movies-wp">
+                <div class="app__movies-items">
+                    <a href="" class="app__movies-items-link">
+                        <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
+                        <button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+                <div class="app__movies-items">
+                    <span><img src="" alt=""></span>
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                </div>
+            </div>
+        </div>
 
-    </html>
+    </div>
+
+    <!--Footer-->
+    <!--Script-->
+</body>
+
+</html>
