--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -16,7 +16,7 @@
         <div class="header__nav__wp">
             <div class="navbar">
                 <div class="nav__items" style="color: #c86877;">Lotto</div>
-                <div class="nav__items"><a href="" class="nav__items-link">Tin tức</a></div>
+                <div class="nav__items"><a href="..\News2\index.html" class="nav__items-link">Tin tức</a></div>
                 <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
                 </div>
                 <div class="nav__logo"></div>
