--- a/Frontend/News2/index.html
+++ b/Frontend/News2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <title>Review Phim</title>
-<link rel = "mainsheet" href = "main.css">
+<link rel = "stylesheet" href = "main.css">
 </head>
 <body>
     <div class = "container">
