--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -16,7 +16,7 @@
         <div class="header__nav__wp">
             <div class="navbar">
                 <div class="nav__items" style="color: #c86877;">Lotto</div>
-                <div class="nav__items"><a href="..\News2\index.html" class="nav__items-link">Tin tức</a></div>
+                <div class="nav__items"><a href="..\News2\new2.html" class="nav__items-link">Tin tức</a></div>
                 <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
                 </div>
                 <div class="nav__logo"></div>
@@ -37,37 +37,37 @@
         <div class="app__movies">
             <h1 class="app__movies-title">Mua Ve Theo Phim</h1>
             <div class="app__movies-wp">
-                <div class="app__movies-items">
-                    <a href="" class="app__movies-items-link">
-                        <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
+                <div class="app__movies-items"> 
+                       <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
+                        <a href="" class="app__movies-items-link">
                         <button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <span><img src="" alt=""></span>
+                    <img src="movies2.jpg" alt="movies">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
             </div>
