--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -37,38 +37,78 @@
         <div class="app__movies">
             <h1 class="app__movies-title">Mua Ve Theo Phim</h1>
             <div class="app__movies-wp">
-                <div class="app__movies-items"> 
-                       <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
-                        <a href="" class="app__movies-items-link">
+                <div class="app__movies-items">
+                    <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
+                    <a href="" class="app__movies-items-link">
                         <button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
+                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <div class="app__movies-items-dec">
+                        <a href="" class="app__movies-items-title-link">
+                            <h3 class="app__movies-items-title">Mang Me Di Bo</h3>
+                        </a>
+                    </div>
+                </div>
+                <div class="app__movies-items">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
                 <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
+                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
                     <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
                 </div>
-                <div class="app__movies-items">
-                    <img src="movies2.jpg" alt="movies">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+            </div>
+        </div>
+        <!-- Mua ve theo rap -->
+        <!-- Khu vuv -->
+        <div class="app__cinema">
+            <h1 class="app__movies-title">Mua Ve Theo Rap</h1>
+            <div class="app__cinema-wp">
+                <div class="app__cinema-location">
+                    <h3 class="app__cinema-location-title">Khu vuc</h3>
+                    <ul class="app__cinema-location-list">
+                        <li class="app__cinema-location-list-items">Tp.Ho Chi Minh</li>
+                        <li class="app__cinema-location-list-items">Ha Noi</li>
+                        <li class="app__cinema-location-list-items">Tien Giang</li>
+                    </ul>
+                </div>
+                <!-- Rap phim -->
+                <div class="app__cinema-item">
+                    <h3 class="app__cinema-item-title">CGV</h3>
+                    <ul class="app__cinema-item-list">
+                        <li class="app__cinema-item-list-items">Ung Van Khiem</li>
+                        <li class="app__cinema-item-list-items">Bui Dinh Tuy</li>
+                        <li class="app__cinema-item-list-items">Quang Trung</li>
+                    </ul>
+                </div>
+                <!-- calender -->
+                <div class="app__calender">
+                    <!-- Date -->
+                    <div class="app__calender-date">
+    
+                    </div>
+                    <!-- Note -->
+                    <!-- Title -->
+                    <!-- Item -->
+    
                 </div>
             </div>
         </div>
