--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -78,34 +78,41 @@
             </div>
         </div>
         <!-- Mua ve theo rap -->
-        <!-- Khu vuv -->
+        <!-- Khu vuc -->
         <div class="app__cinema">
             <h1 class="app__movies-title">Mua Ve Theo Rap</h1>
             <div class="app__cinema-wp">
                 <div class="app__cinema-location">
                     <h3 class="app__cinema-location-title">Khu vuc</h3>
                     <ul class="app__cinema-location-list">
-                        <li class="app__cinema-location-list-items">Tp.Ho Chi Minh</li>
-                        <li class="app__cinema-location-list-items">Ha Noi</li>
-                        <li class="app__cinema-location-list-items">Tien Giang</li>
+                        <div class="app__cinema-location-list-wp">
+                            <li class="app__cinema-location-list-items">Tp.Ho Chi Minh</li>
+                            <li class="app__cinema-location-list-items">Ha Noi</li>
+                            <li class="app__cinema-location-list-items">Tien Giang</li>
+                        </div>
                     </ul>
                 </div>
                 <!-- Rap phim -->
                 <div class="app__cinema-item">
                     <h3 class="app__cinema-item-title">CGV</h3>
                     <ul class="app__cinema-item-list">
-                        <li class="app__cinema-item-list-items">Ung Van Khiem</li>
-                        <li class="app__cinema-item-list-items">Bui Dinh Tuy</li>
-                        <li class="app__cinema-item-list-items">Quang Trung</li>
+                        <div class="app__cinema-item-list-wp">
+                            <li class="app__cinema-item-list-items">Ung Van Khiem</li>
+                            <li class="app__cinema-item-list-items">Bui Dinh Tuy</li>
+                            <li class="app__cinema-item-list-items">Quang Trung</li>
+                        </div>
                     </ul>
                 </div>
                 <!-- calender -->
                 <div class="app__calender">
                     <!-- Date -->
                     <div class="app__calender-date">
-    
+                        <i class="fa-light fa-circle-info"></i>
                     </div>
                     <!-- Note -->
+                     <div class="app__calender-note">
+
+                     </div>
                     <!-- Title -->
                     <!-- Item -->
     
@@ -116,6 +123,7 @@
     </div>
 
     <!--Footer-->
+    <div class="footer__wp"></div>
     <!--Script-->
 </body>
 
