--- a/Frontend/Sign up/giaodien.html
+++ b/Frontend/Sign up/giaodien.html
@@ -23,6 +23,15 @@
       <label for="phone">Số điện thoại:</label>
       <input type="tel" id="phone" name="phone" required pattern="0[0-9]{9}">
 
+      <label for="username">Tài khoản:</label>
+      <input type="text" id="username" name="username" required>
+
+      <label for="password">Mật khẩu:</label>
+      <input type="password" id="password" name="password" required minlength="6">
+
+      <label for="confirmPassword">Xác nhận mật khẩu:</label>
+      <input type="password" id="confirmPassword" name="confirmPassword" required minlength="6">
+
       <button type="submit">Đăng Ký</button>
     </form>
 
