--- a/Frontend/Sign up/giaodien.html
+++ b/Frontend/Sign up/giaodien.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng Ký Tài Khoản</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="Frontend\Sign up\makeup.css" href="style.css">
 </head>
 <body>
   <div class="container">
