--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="base.css">
     <title>Lotto</title>
@@ -107,15 +107,54 @@
                 <div class="app__calender">
                     <!-- Date -->
                     <div class="app__calender-date">
-                        <i class="fa-light fa-circle-info"></i>
+                        <div class="app__calender-date-wp">
+
+                            <div class="app__calender-date-items">06/8</div>
+                            <div class="app__calender-date-items">07/8</div>
+                            <div class="app__calender-date-items">08/8</div>
+                            <div class="app__calender-date-items">09/8</div>
+                        </div>
                     </div>
                     <!-- Note -->
-                     <div class="app__calender-note">
-
-                     </div>
+                    <div class="app__calender-note">
+                        <!-- app__calender-note-icon -->
+                        <div class="app__calender-note-wp">
+                            <p class="app__calender-note-dec"><i
+                                    class="fa-solid fa-circle-info app__calender-note-icon"></i>Nhấn vào suất chiếu để
+                                tiến hành mua vé</p>
+                        </div>
+                    </div>
                     <!-- Title -->
+                    <div class="app__calender-title">
+                        <div class="app__calender-title-wp">
+                            <span class="flex">
+                                <div class="app__calender-title-item1">CGV Ung Van Khiem. </div>
+                                <div class="app__calender-title-date-date">Thu 4, 06/08/2025</div>
+                            </span>
+
+                            <div class="app__calender-title-items">Tang 5- 123 Ung Van Khiem, Binh Thanh, Tp.Ho Chi Minh
+                            </div>
+                        </div>
+                    </div>
                     <!-- Item -->
-    
+                    <div class="app__calender-item">
+                        <div class="app__calender-item-img-wp">
+                            <img src="..\img\movies1.jpg" alt="movies" class="app__calender-item-img">
+                        </div>
+                        <div class="app__calender-items-wp">
+                            <div class="app__calender-items-title">Mang Me Di Bo
+                            </div>
+                            <div class="app__calender-items-time-wp">
+
+                                <div class="app__calender-items-time">8:00</div>
+                                <div class="app__calender-items-time">11:00</div>
+                                <div class="app__calender-items-time">13:00</div>
+                                <div class="app__calender-items-time">15:00</div>
+                                <div class="app__calender-items-time">15:00</div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
