--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -138,21 +138,44 @@
                     </div>
                     <!-- Item -->
                     <div class="app__calender-item">
-                        <div class="app__calender-item-img-wp">
-                            <img src="..\img\movies1.jpg" alt="movies" class="app__calender-item-img">
-                        </div>
-                        <div class="app__calender-items-wp">
-                            <div class="app__calender-items-title">Mang Me Di Bo
+                        <!-- Sec1 -->
+                        <div class="app__calender-item-wp">
+                            <div class="app__calender-item-img-wp">
+                                <img src="..\img\movies1.jpg" alt="movies" class="app__calender-item-img">
                             </div>
-                            <div class="app__calender-items-time-wp">
+                            <div class="app__calender-items-wp">
+                                <div class="app__calender-items-title">Mang Me Di Bo
+                                </div>
+                                <div class="app__calender-items-dec">Leaving Mom . 2h00</div>
+                                <div class="app__calender-items-time-wp">
+                                    <div class="app__calender-items-time">8:00</div>
+                                    <div class="app__calender-items-time">11:00</div>
+                                    <div class="app__calender-items-time">13:00</div>
+                                    <div class="app__calender-items-time">15:00</div>
+                                    <div class="app__calender-items-time">15:00</div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Sec2 -->
+                         <div class="app__calender-item-wp">
+                            <div class="app__calender-item-img-wp">
+                                <img src="..\img\movies1.jpg" alt="movies" class="app__calender-item-img">
+                            </div>
+                            <div class="app__calender-items-wp">
+                                <div class="app__calender-items-title">Mang Me Di Bo
+                                </div>
+                                <div class="app__calender-items-dec">Leaving Mom . 2h00</div>
+                                <div class="app__calender-items-time-wp">
+                                    <div class="app__calender-items-time">8:00</div>
+                                    <div class="app__calender-items-time">11:00</div>
+                                    <div class="app__calender-items-time">13:00</div>
+                                    <div class="app__calender-items-time">15:00</div>
+                                    <div class="app__calender-items-time">15:00</div>
+                                </div>
+                            </div>
+                        </div>
 
-                                <div class="app__calender-items-time">8:00</div>
-                                <div class="app__calender-items-time">11:00</div>
-                                <div class="app__calender-items-time">13:00</div>
-                                <div class="app__calender-items-time">15:00</div>
-                                <div class="app__calender-items-time">15:00</div>
-                            </div>
-                        </div>
+                        
                     </div>
 
                 </div>
