--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -86,9 +86,9 @@
                     <h3 class="app__cinema-location-title">Khu vuc</h3>
                     <ul class="app__cinema-location-list">
                         <div class="app__cinema-location-list-wp">
-                            <li class="app__cinema-location-list-items">Tp.Ho Chi Minh</li>
-                            <li class="app__cinema-location-list-items">Ha Noi</li>
-                            <li class="app__cinema-location-list-items">Tien Giang</li>
+                            <li class="app__cinema-location-list-items app__cinema-location-list-items.active">Tp.Ho Chi Minh</li>
+                            <li class="app__cinema-location-list-items app__cinema-location-list-items.active">Ha Noi</li>
+                            <li class="app__cinema-location-list-items app__cinema-location-list-items.active">Tien Giang</li>
                         </div>
                     </ul>
                 </div>
@@ -97,9 +97,9 @@
                     <h3 class="app__cinema-item-title">CGV</h3>
                     <ul class="app__cinema-item-list">
                         <div class="app__cinema-item-list-wp">
-                            <li class="app__cinema-item-list-items">Ung Van Khiem</li>
-                            <li class="app__cinema-item-list-items">Bui Dinh Tuy</li>
-                            <li class="app__cinema-item-list-items">Quang Trung</li>
+                            <li class="app__cinema-item-list-items app__cinema-item-list-items.active ">Ung Van Khiem</li>
+                            <li class="app__cinema-item-list-items app__cinema-item-list-items.active ">Bui Dinh Tuy</li>
+                            <li class="app__cinema-item-list-items app__cinema-item-list-items.active ">Quang Trung</li>
                         </div>
                     </ul>
                 </div>
@@ -187,6 +187,48 @@
     <!--Footer-->
     <div class="footer__wp"></div>
     <!--Script-->
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const locationItems = document.querySelectorAll('.app__cinema-location-list-items');
+        const cinemaItem = document.querySelector('.app__cinema-item');
+        const calendar = document.querySelector('.app__calender');
+        const cinemaListItems = document.querySelectorAll('.app__cinema-item-list-items');
+
+        // Ẩn rạp & lịch chiếu ban đầu
+        cinemaItem.style.display = 'none';
+        calendar.style.display = 'none';
+
+        // Click vào khu vực
+        locationItems.forEach(location => {
+            location.addEventListener('click', function () {
+                // Bỏ active các khu vực khác
+                locationItems.forEach(i => i.classList.remove('active'));
+                this.classList.add('active');
+
+                // Hiện rạp, ẩn lịch
+                cinemaItem.style.display = 'block';
+                calendar.style.display = 'none';
+
+                // Bỏ chọn rạp trước đó
+                cinemaListItems.forEach(i => i.classList.remove('active'));
+            });
+        });
+
+        // Click vào rạp
+        cinemaListItems.forEach(cinema => {
+            cinema.addEventListener('click', function () {
+                // Bỏ active các rạp khác
+                cinemaListItems.forEach(i => i.classList.remove('active'));
+                this.classList.add('active');
+
+                // Hiện lịch chiếu
+                calendar.style.display = 'block';
+            });
+        });
+    });
+</script>
+
+
 </body>
 
 </html>
